Refactorized sidebar component

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,1 +1,15 @@
-<p>sidebar works!</p>
+<div class="grid grid-cols-1 gap-4">
+    <h2>Búsquedas</h2>
+    <hr>
+    <ul class="list-none">
+        <li routerLink="" routerLinkActive="font-bold" [routerLinkActiveOptions]="{exact: true}">
+            Searh country
+        </li>
+        <li routerLink="region" routerLinkActive="font-bold">
+            By region
+        </li>
+        <li routerLink="capital" routerLinkActive="font-bold">
+            By capital
+        </li>
+    </ul>
+</div>
