--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
 <div class="grid grid-cols-12 gap-4 p-4">
-    <app-sidebar class="col-span-1"></app-sidebar>
-    <div class="col-span-11">
-        <div class="grid grid-cols-1 gap-4">
-            <h2>Por Región</h2>
-            <hr>
+    <app-sidebar class="col-span-2"></app-sidebar>
+    <div class="col-span-10">
+        <div class="grid grid-cols-1 px-4">
             <router-outlet></router-outlet>
         </div>
     </div>
