--- a/src/app/country/components/country-input/country-input.component.html
+++ b/src/app/country/components/country-input/country-input.component.html
@@ -1,3 +1,3 @@
 <form (ngSubmit)="searchHandler()" autocomplete="off">
-    <input type="text" name="query" class="form-input" placeholder="Search country" [(ngModel)]="query">
+    <input type="text" name="query" class="form-input" [placeholder]="placeholder" [(ngModel)]="query" (input)="pressedKeyHandler()">
 </form>
