--- a/src/app/country/pages/per-capital/per-capital.component.html
+++ b/src/app/country/pages/per-capital/per-capital.component.html
@@ -1,1 +1,13 @@
-<p>per-capital works!</p>
+<h2>Per Capital</h2>
+<hr class="my-4">
+<div class="flex flex-row w-full">
+    <app-country-input
+        (onEnter)="searchHandler($event)"
+        placeholder="Search capital city..."
+    ></app-country-input>
+</div>
+<hr class="my-4">
+<div *ngIf="hasError" class="bg-red-100 text-red-700 p-4">
+    No se encontró nada con el término {{ query }}
+</div>
+<app-country-table class="grid grid-cols-1" [countries]="countries"></app-country-table>
