Added template to display country

--- a/src/app/country/pages/show-country/show-country.component.html
+++ b/src/app/country/pages/show-country/show-country.component.html
@@ -1,1 +1,11 @@
-<p>show-country works!</p>
+<div *ngIf="!country; else divCountry">
+Wait a moment please...
+</div>
+
+<ng-template #divCountry>
+    <div class="grid grid-cols-1">
+        <div>
+            {{ country.name }}
+        </div>
+    </div>
+</ng-template>
