Added animate css library

--- a/src/app/country/pages/per-country/per-country.component.html
+++ b/src/app/country/pages/per-country/per-country.component.html
@@ -11,4 +11,4 @@
 <div *ngIf="hasError" class="bg-red-100 text-red-700 p-4">
     No se encontró nada con el término {{ query }}
 </div>
-<app-country-table class="grid grid-cols-1" [countries]="countries"></app-country-table>
+<app-country-table class="grid grid-cols-1 animate__animated animate__fadeIn" [countries]="countries"></app-country-table>
