--- a/src/app/country/pages/per-region/per-region.component.html
+++ b/src/app/country/pages/per-region/per-region.component.html
@@ -17,5 +17,5 @@
 </div>
 
 <div *ngIf="countries.length > 0">
-    <app-country-table class="grid grid-cols-1" [countries]="countries"></app-country-table>
+    <app-country-table class="grid grid-cols-1 animate__animated animate__fadeIn" [countries]="countries"></app-country-table>
 </div>
