--- a/src/app/country/pages/show-country/show-country.component.html
+++ b/src/app/country/pages/show-country/show-country.component.html
@@ -3,7 +3,7 @@ Wait a moment please...
 </div>
 
 <ng-template #divCountry>
-    <div class="grid grid-cols-1">
+    <div class="grid grid-cols-1 animate__animated animate__fadeIn">
         <div>
             {{ country.name }}
         </div>
